# canvasOS

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md  tsconfig.base.json  turbo.json  vitest.workspace.ts
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: capacitor.config.ts  package.json
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: workspace.spec.ts
apps/web/src/: App.tsx
apps/web/src/components/: BottomNavBar.tsx  CanvasViewport.tsx  DebugPanel.tsx  ErrorBoundary.tsx  LayerPanel.tsx  ModuleNav.tsx  ModulePanel.tsx  SideNavBar.tsx  StatusBar.tsx  ToastProvider.tsx  Toolbar.tsx  TopNavBar.tsx
apps/web/src/pages/: WelcomePage.tsx  WorkspacePage.tsx
apps/web/src/stores/: canvasStore.ts  layerStore.ts
apps/web/src/styles/: global.css
apps/web/src/views/: AIGenerationView.tsx  AnimationView.tsx  CodeArtView.tsx  CollabView.tsx  MasterWorkspaceView.tsx  MusicView.tsx  PaintingView.tsx  SculptingView.tsx
examples/plugins/color-palette/: index.js  manifest.json
services/ai-gateway/: Dockerfile  main.py  requirements.txt
services/api/: Dockerfile  package.json  tsconfig.json
services/api/sql/: init.sql
services/api/src/: server.ts
services/api/src/collab/: YjsManager.ts
services/api/src/routes/: collab.ts  health.ts  plugins.ts  (+1 more)
