[package]
name = "canvasos-desktop"
version = "1.0.0"
description = "CanvasOS Desktop"
authors = ["CanvasOS Team"]
license = "MIT"
repository = "https://github.com/canvasos/canvasos"
edition = "2021"
rust-version = "1.77"

[lib]
name = "canvasos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "canvasos-desktop"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
